--- a/package.json
+++ b/package.json
@@ -45,5 +45,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "Shared EVO-IT components",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MrRainesE/shared-components.git"
+  },
+  "author": "evo-it",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MrRainesE/shared-components/issues"
+  },
+  "homepage": "https://github.com/MrRainesE/shared-components#readme"
 }
