--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shared-components",
+  "name": "evo-it-shared-components",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
