--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "evo-it-custom-components",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": false,
   "dependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.24.5",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.17",
@@ -48,7 +49,6 @@
   },
   "description": "Shared EVO-IT components",
   "main": "index.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MrRainesE/shared-components.git"
