--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evo-it-custom-components",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "private": false,
   "dependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.24.5",
@@ -48,7 +48,7 @@
     ]
   },
   "description": "Shared EVO-IT components",
-  "main": "index.js",
+  "main": "build/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MrRainesE/shared-components.git"
