--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "evo-it-custom-components",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "private": false,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.24.5",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
