--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "build": "babel src -d dist",
-    "prepublishOnly": "npm run build"
+    "build": "tsup",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "eslintConfig": {
     "extends": [
@@ -47,7 +47,12 @@
     ]
   },
   "description": "Shared EVO-IT components",
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
+"module": "./dist/index.mjs",
+"types": "./dist/index.d.ts",
+"files": [
+    "dist"
+ ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MrRainesE/shared-components.git"
@@ -62,6 +67,7 @@
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
-    "babel-loader": "^9.1.3"
+    "babel-loader": "^9.1.3",
+    "tsup": "^8.0.2"
   }
 }
