--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evo-it-custom-components",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": false,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
@@ -25,8 +25,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "build": "tsup",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel src -d dist",
+    "prepublishOnly": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,12 +47,7 @@
     ]
   },
   "description": "Shared EVO-IT components",
-  "main": "./dist/index.js",
-"module": "./dist/index.mjs",
-"types": "./dist/index.d.ts",
-"files": [
-    "dist"
- ],
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MrRainesE/shared-components.git"
@@ -64,10 +59,8 @@
   },
   "homepage": "https://github.com/MrRainesE/shared-components#readme",
   "devDependencies": {
-    "@babel/core": "^7.24.5",
+    "@babel/cli": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
-    "@babel/preset-react": "^7.24.1",
-    "babel-loader": "^9.1.3",
-    "tsup": "^8.0.2"
+    "@babel/preset-react": "^7.24.1"
   }
 }
