--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "build": "babel src -d dist",
+    "build": "babel src --out-dir dist",
     "prepublishOnly": "npm run build"
   },
   "eslintConfig": {
