--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
   "name": "evo-it-custom-components",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": false,
+  "description": "Shared EVO-IT components",
+  "main": "dist/index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MrRainesE/shared-components.git"
+  },
+  "author": "evo-it",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MrRainesE/shared-components/issues"
+  },
+  "homepage": "https://github.com/MrRainesE/shared-components#readme",
   "dependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-transform-private-property-in-object": "^7.24.5",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.17",
@@ -20,13 +30,17 @@
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-i18next": "^14.1.1",
-    "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "build": "babel src --out-dir dist",
     "prepublishOnly": "npm run build"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-react": "^7.24.1"
   },
   "eslintConfig": {
     "extends": [
@@ -45,24 +59,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "description": "Shared EVO-IT components",
-  "main": "src/index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MrRainesE/shared-components.git"
-  },
-  "author": "evo-it",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MrRainesE/shared-components/issues"
-  },
-  "homepage": "https://github.com/MrRainesE/shared-components#readme",
-  "devDependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "@babel/cli": "^7.24.5",
-    "@babel/preset-env": "^7.24.5",
-    "@babel/preset-react": "^7.24.1"
   }
 }
