--- a/package.json
+++ b/package.json
@@ -30,17 +30,18 @@
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-i18next": "^14.1.1",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "build": "babel src --out-dir dist",
+    "build": "babel --extensions .ts,.tsx ./src -d ./dist",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
-    "@babel/preset-react": "^7.24.1"
+    "@babel/preset-react": "^7.24.1",
+    "@babel/preset-typescript": "^7.24.1",
+    "typescript": "^5.4.5"
   },
   "eslintConfig": {
     "extends": [
