--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evo-it-custom-components",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "private": false,
   "description": "Shared EVO-IT components",
   "main": "dist/index.js",
@@ -38,10 +38,14 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.24.5",
+    "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
     "@babel/preset-typescript": "^7.24.1",
-    "typescript": "^5.4.5"
+    "babel-loader": "^9.1.3",
+    "typescript": "^5.4.5",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   },
   "eslintConfig": {
     "extends": [
